--- a/Qr-generator/index.html
+++ b/Qr-generator/index.html
@@ -8,7 +8,37 @@
 </head>
 <body>
     <div class="container">
-        
+        <p> Enter your text or URL</p>
+        <input type="text" placeholder="Text or URL" id="qrText">
+
+        <div id="imgBox">
+            <img src="" id="qrImg">
+        </div>
+
+
+        <button onclick="generateQR()">Generate QR code</button>
     </div>
+
+
+    <script>
+        let imgBox = document.getElementById("imgBox");
+        let qrImg = document.getElementById("qrImg");
+        let qrText = document.getElementById("qrText");
+
+        function generateQR(){
+            if(qrText.value.length > 0){
+                qrImg.src = "https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + qrText.value;
+                imgBox.classList.add("show-img");
+            }
+            else{
+                qrText.classList.add('error');
+                setTimeout(()=>{
+                    qrText.classList.remove('error');
+                },1000);
+            }
+            
+        }
+    </script>
 </body>
+
 </html>
